2007-03-18  Jens Granseuer  <jensgr@gmx.net>

        Patch by: Andreas Koehler <andi5.py@gmx.net>

	* gnome-keyboard-properties.glade: use automatic instead of always
        scrollbar policy for the layout selection dialog (fixes #345884)

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkblt.c:
	(xkb_layouts_prepare_selected_tree): use a radio button instead of a
	checkbox to indicate the default layout. Fixes #389469.

2007-02-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkblt.c: (def_group_in_gconf_changed):
	add another NULL check. Should really fix #398631.

2007-01-21  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: the capplet should not crash if
	default group is not set in GConf (i.e. GConf part of the g-c-c
	installation failed for some reason). Closing #398631

2007-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-keyboard-properties.c: (main): Fix a typo.

2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>

	Fixes #336286

	* gnome-keyboard-properties.c (main): switched from popt to GOptionContext.

2006-09-15  Rodrigo Moya <rodrigo@novell.com>

	Fixes #356074

	* gnome-keyboard-properties-xkb.c (set_model_text): make sure 'model'
	is never NULL. Original patch from Brian Cameron <brian.cameron@sun.com>.

2006-08-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #348847

	* keyboard.desktop.in.in: fixed GNOME Bugzilla strings.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* keyboard.desktop.in.in:
	don't list the Application category, list the HardwareSettings one,
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)
	
2006-07-08  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: making model choser button more
	verbose. Closing #335833

2006-07-06  Sergey Udaltsov <svu@gnome.org>

	Fixing the build process

2006-06-25  Sergey Udaltsov <svu@gnome.org>

	*.c: massive libgswitchit API change
	(following standard GNOME naming conventions)
