@@ -1,3 +1,9 @@
+2007-03-21  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkblt.c, Makefile.am,
+	gnome-keyboard-properties-xkbltadd.c: split the layout chooser into
+	separate C file
+
 2007-03-18  Jens Granseuer  <jensgr@gmx.net>
 
         Patch by: Andreas Koehler <andi5.py@gmx.net>
